fix spacing on Upload Thumbnail button

--- a/static/css/lights-on.css
+++ b/static/css/lights-on.css
@@ -1474,7 +1474,7 @@ margin-top: 20px;
 
 #edit_video_wrapper p {
 float: left;
-padding-right: 10px;
+padding-right: 6px;
 }
 
 
